# menorepo

./: .gitignore  CLAUDE.md  README.md
boilerplates/fastapi/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
boilerplates/fastapi/alembic/: env.py
boilerplates/fastapi/src/app/: main.py
boilerplates/fastapi/src/app/api/: __init__.py  deps.py
boilerplates/fastapi/tests/: conftest.py
boilerplates/rust-web-app/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
boilerplates/rust-web-app/config/: default.toml  production.toml
boilerplates/rust-web-app/migrations/: 20250101000000_create_users_table.sql
boilerplates/rust-web-app/src/: main.rs
boilerplates/rust-web-app/src/config/: mod.rs
boilerplates/rust-web-app/src/middleware/: auth.rs
boilerplates/rust-web-app/src/models/: mod.rs  user.rs
boilerplates/rust-web-app/src/routes/: health.rs  mod.rs  users.rs
boilerplates/rust-web-app/src/utils/: auth.rs  error.rs  mod.rs  response.rs
docs/: resume.md
projects/pi5-trading-system/: .air.toml  .env.example  .gitignore  CLAUDE.md  DECISION_WORKSHEET.md  DEPLOYMENT_QUESTIONS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.test  Makefile  PHASE1_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  go.mod  pyproject.toml  pytest.ini  requirements.md  requirements.txt  run_integration_tests.py  test_enhanced_backtester.py  test_market_data.py  test_realtime_strategy.py  test_strategy_backtesting.py  test_strategy_mock.py
projects/pi5-trading-system/cmd/api/: main.go
projects/pi5-trading-system/cmd/backtest/: main.go
projects/pi5-trading-system/cmd/optimize/: main.go
projects/pi5-trading-system/config/: trading_config.yaml
projects/pi5-trading-system/configs/: config.yaml
projects/pi5-trading-system/dashboard/: README.md  biome.json  main.py  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
projects/pi5-trading-system/dashboard/public/: index.html
projects/pi5-trading-system/dashboard/src/: App.tsx  index.css  index.tsx
projects/pi5-trading-system/deployment/: DEPLOYMENT_COMPARISON.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.api-only  QUICK_REFERENCE.md  README.md  RESOURCE_USAGE.md  deploy.sh  docker-compose.yml  init_db.sql  pi5-trading.service  setup-github-runner.sh  setup-pi-docker.sh  setup-pi.sh  setup_pi5.sh
projects/pi5-trading-system/deployments/: docker-compose.yml
projects/pi5-trading-system/docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  MARKET_DATA_SETUP.md  OPTIMIZATION_GUIDE.md  PI5-OPTIMIZATION.md  QUICKSTART.md  REQUIREMENTS.md  RISK_MANAGEMENT_GUIDE.md  SYSTEM_DESIGN.md  TECHNICAL_ARCHITECTURE.md
projects/pi5-trading-system/internal/api/: server.go
projects/pi5-trading-system/internal/audit/: logger.go
projects/pi5-trading-system/internal/backtest/: README.md  config.go  engine.go  errors.go  executor.go  metrics.go  montecarlo.go  optimizer.go  report.go  types.go  visualization.go  walkforward.go
projects/pi5-trading-system/internal/circuitbreaker/: breaker.go
projects/pi5-trading-system/internal/config/: config.go
projects/pi5-trading-system/internal/data/: orders_repository.go  portfolio_repository.go  user_repository.go
projects/pi5-trading-system/internal/database/: migrate.go
projects/pi5-trading-system/internal/marketdata/: alpaca_client.go  backfill.go  provider.go  websocket.go
projects/pi5-trading-system/internal/risk/: dynamic_allocation.go  portfolio_manager.go  position_sizing.go
projects/pi5-trading-system/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql
projects/pi5-trading-system/pkg/indicators/: README.md  atr.go  bollinger.go  ema.go  indicator.go  macd.go  rsi.go  vwap.go
projects/pi5-trading-system/pkg/types/: market.go  order.go
projects/pi5-trading-system/scripts/: build.sh  docker-up.sh  enable_compression.sql  run.sh  setup_cron.sh
projects/pi5-trading-system/tests/: __init__.py
projects/pi5-trading-system/tests/integration/: __init__.py  test_backtesting_integration.py  test_broker_failover_system.py  test_end_to_end_system.py  test_enhanced_backtester_integration.py  test_live_broker_integration.py  test_market_data_integration.py  test_phase3_integration.py  test_strategy_coordination.py  test_trading_system_integration.py  test_walk_forward_analysis.py
projects/pi5-trading-system/tests/unit/: test_enhanced_backtester.py  test_genetic_optimizer.py
projects/pi5-trading-system/trading_api/: __init__.py  main.py
projects/pi5-trading-system/trading_api/backtesting/: __init__.py  engine.py  enhanced_backtester.py
projects/pi5-trading-system/trading_api/config/: __init__.py
projects/pi5-trading-system/trading_api/core/: __init__.py  exceptions.py  interfaces.py
projects/pi5-trading-system/trading_api/database/: __init__.py  connection_manager.py  schema.py
projects/pi5-trading-system/trading_api/events/: __init__.py  event_bus.py  event_router.py  event_types.py
projects/pi5-trading-system/trading_api/optimization/: __init__.py  example_usage.py  genetic_optimizer.py  monte_carlo_simulator.py  parameter_optimizer.py  walk_forward_analysis.py
projects/pi5-trading-system/trading_api/orders/: __init__.py  enhanced_order_manager.py  manager.py
projects/pi5-trading-system/trading_api/portfolio/: __init__.py  manager.py
projects/pi5-trading-system/trading_api/risk/: __init__.py  manager.py
projects/pi5-trading-system/trading_api/strategies/: __init__.py  base.py  correlation_analyzer.py  enhanced_base.py  manager.py  momentum_trend_following.py  moving_average_crossover.py  multi_timeframe_base.py  multi_timeframe_trend_following.py  parameter_optimizer.py  portfolio_optimizer.py  realtime_moving_average.py  rsi_mean_reversion.py  walk_forward_analyzer.py
projects/pi5-trading-system/trading_api/web/: __init__.py  app.py  auth.py  config.py  models.py  websocket_manager.py
(+569 files in other folders)
